--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,5 +1,5 @@
 name: MiniGameWorld-Controller
-main: com.worldbiomusic.minigameworld.controller.MiniGameWorldControllerMain
+main: com.minigameworld.controller.MiniGameWorldControllerMain
 version: 0.6
 author: worldbiomusic
 api-version: 1.14
